# BMP-Image-editor-application

./: BMP Editor.cpp  CMakeLists.txt  CS112-2022-2nd – S4 -20210083-20210485-20211033-A3- Part1.cpp  Dark_bright.cpp  README.md  RGB Editor.cpp  RGB-BmpEditor.cpp  bmplib.cpp  bmplib.h  demo.cpp  filter_A.cpp  flip.cpp  main2.cpp  rotate.cpp
