cmake_minimum_required(VERSION 3.21)
project(A3)

set(CMAKE_CXX_STANDARD 14)

add_executable(The_project "BMP Editor.cpp")
add_executable(A3 BW.cpp)
add_executable(A3_0 main2.cpp)
add_executable(A3_1 demo.cpp)
add_executable(A3_2 Dark_bright.cpp)
add_executable(A3_3 flip.cpp)
add_executable(A3_4 rotate.cpp)
add_executable(A3_5 filter_A.cpp)